--- a/config/ExtraUtilities.cfg
+++ b/config/ExtraUtilities.cfg
@@ -14,10 +14,10 @@ blocks {
     B:Decorative_2Enabled=true
     B:DrumEnabled=true
     B:EnderLilyEnabled=true
-    B:EnderMarkerEnabled=false
-    B:EnderQuarryEnabled=false
-    B:EnderQuarryUpgradeEnabled=false
-    B:EnderThermicPumpEnabled=false
+    B:EnderMarkerEnabled=true
+    B:EnderQuarryEnabled=true
+    B:EnderQuarryUpgradeEnabled=true
+    B:EnderThermicPumpEnabled=true
     B:EtherealBlockEnabled=true
     B:FilingCabinetEnabled=true
     B:Generator64Enabled=true
@@ -126,6 +126,7 @@ recipes {
     B:disableDivisionSiginInChests=false
     B:disableDrumRecipe=false
     B:disableEnderLiliesInDungeons=false
+    B:disableEnderQuarryRecipe=true
     B:disableEnderQuarryUpgradesRecipes=true
     B:disableEnderThermicPumpRecipe=true
     B:disableEnergyExtractionPipeRecipe=false
