--- a/config/FlaxbeardsSteamPower.cfg
+++ b/config/FlaxbeardsSteamPower.cfg
@@ -71,7 +71,7 @@ integration {
     B:"Enable Thaumcraft"=true
     B:"Enable Thermal Foundation"=true
     B:"Enable Twilight Forest"=true
-    B:"Railcraft Poor Ore"=true
+    B:"Railcraft Poor Ore"=false
 }
 
 
@@ -89,7 +89,7 @@ items {
 
 
 machines {
-    I:"Chance of double drops from Rock Smasher (1 in X)"=4
+    I:"Chance of double drops from Rock Smasher (1 in X)"=1
     I:"Chance of duplicate drops from Buzzsaw (1 in X)"=6
     I:"Item Mortar accuracy (radius in blocks)"=2
     B:"Thumper drops items (may lag servers)"=true
@@ -113,7 +113,7 @@ machines {
 other {
     B:"Disable block break particles (May solve crashes with guns, thumper)"=false
     B:"Enable Easter Eggs"=true
-    B:"Enable wimp mode (no explosions)"=false
+    B:"Enable wimp mode (no explosions)"=true
 }
 
 
@@ -161,8 +161,8 @@ weapons {
     B:"Generate End Zinc"=false
     B:"Generate Nether Copper"=false
     B:"Generate Nether Zinc"=false
-    B:"Generate Overworld Copper"=true
-    B:"Generate Overworld Zinc"=true
+    B:"Generate Overworld Copper"=false
+    B:"Generate Overworld Zinc"=false
 }
 
 
