--- a/config/RandomThings.cfg
+++ b/config/RandomThings.cfg
@@ -5,7 +5,7 @@ blocks {
     B:DyeingMachine=true
     B:EnderEnergyDistributor=true
     B:EnergyDistributor=true
-    B:FertilizedDirt=true
+    B:FertilizedDirt=false
     B:FluidDisplay=true
     B:ItemCollector=true
     B:LapisLamp=true
