--- a/config/dynamicswordskills.cfg
+++ b/config/dynamicswordskills.cfg
@@ -74,7 +74,7 @@ general {
     I:"Max hits to display in Combo HUD [0-12]"=3
     B:"Require double tap activation"=true
     I:"Weight for skill orbs when added to vanilla chest loot (0 to disable) [0-10]"=1
-    B:"Whether all players should start with a Basic Skill orb"=true
+    B:"Whether all players should start with a Basic Skill orb"=false
     B:"[Back Slice] Allow Back Slice to potentially knock off player armor"=true
     B:"[Combo HUD] Whether the combo hit counter will display by default (may be toggled in game)"=true
     I:"[Parry] Bonus to disarm based on timing: tenths of a percent added per tick remaining on the timer [0-50]"=25
